--- a/package.json
+++ b/package.json
@@ -5,10 +5,19 @@
   "repository": "https://github.com/KIMJUNSICK/BS-service.git",
   "author": "Kim Jun Sik <jinaganda5@gmail.com>",
   "license": "MIT",
+  "dependencies": {
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/node": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "prisma-client-lib": "^1.34.6"
+  },
   "scripts": {
     "generate": "prisma generate",
     "deploy": "prisma deploy",
     "prisma": "yarn run deploy && yarn run generate",
-    "start": "nodemon --exec src/index.js"
+    "start": "nodemon --exec babel-node src/server.js"
   }
 }
